@@ -598,3 +598,6 @@ FIXED: Prevent torches from being randomly colored when an older replay is loade
 FIXED: If the prince is fighting a guard, and the player does a quickload to a state where the prince is near the mouse, the prince would draw the sword.
 DONE: Added options for changing speeds. They are detected from PRINCE.EXE. (Used in Hurry up Prince, for example.)
 DONE: In the settings menu, allow using Page Up, Page Down, Home, End.
+FIXED: Fixed graphical glitches with an opening gate:
+	1. with a loose floor above and a wall above-right.
+	2. with the top half of a big pillar above-right.
